// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled with meta composition 1`] = `
.glamor-0 {
  color: blue;
  color: red;
  color: blue;
  font-size: 20px;
  font-size: 32px;
}

<h1
  className="legacy__class glamor-0"
>
  hello world
</h1>
`;

exports[`styled with meta composition 2`] = `
".css-1sh60en-cssA {
  color: blue;
}

.css-41h7wj-cssB {
  color: blue;
  color: red;
}

.css-1p5bm3j-FinalH2 {
  color: blue;
  color: red;
  color: blue;
  font-size: 20px;
  font-size: 32px;
}"
`;

exports[`styled with meta composition with objects 1`] = `
.glamor-0 {
  color: #333;
  font-size: 1.333em;
  height: 64px;
  font-size: 3.157334518321em;
  font-size: 32px;
}

@media only screen and (-webkit-min-device-pixel-ratio:1.5), only screen and (min--moz-device-pixel-ratio:1.5), only screen and (-o-min-device-pixel-ratio:1.5/1), only screen and (min-resolution:144dpi), only screen and (min-resolution:1.5dppx) {
  .glamor-0 {
    font-size: 1.4323121856191332em;
  }
}

<h1
  className="legacy__class glamor-0"
>
  hello world
</h1>
`;

exports[`styled with meta composition with objects 2`] = `
".css-1c9oixs-cssB {
  color: #333;
  font-size: 1.333em;
  height: 64px;
}

@media only screen and (-webkit-min-device-pixel-ratio:1.5), only screen and (min--moz-device-pixel-ratio:1.5), only screen and (-o-min-device-pixel-ratio:1.5/1), only screen and (min-resolution:144dpi), only screen and (min-resolution:1.5dppx) {
  .css-1c9oixs-cssB {
    font-size: 1.4323121856191332em;
  }
}

.css-1r1vvk5-H2 {
  color: #333;
  font-size: 1.333em;
  height: 64px;
  font-size: 3.157334518321em;
  font-size: 32px;
}

@media only screen and (-webkit-min-device-pixel-ratio:1.5), only screen and (min--moz-device-pixel-ratio:1.5), only screen and (-o-min-device-pixel-ratio:1.5/1), only screen and (min-resolution:144dpi), only screen and (min-resolution:1.5dppx) {
  .css-1r1vvk5-H2 {
    font-size: 1.4323121856191332em;
  }
}"
`;

exports[`styled with meta higher order component 1`] = `
.glamor-0 {
  font-size: 20px;
  background-color: #7fc8d6;
  background-color: '#343a40';
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="glamor-0"
/>
`;

exports[`styled with meta higher order component 2`] = `
".css-1fswo4q-squirtleBlueBackground {
  background-color: #7fc8d6;
}

.css-1xmo17m-NewComponent {
  font-size: 20px;
  background-color: #7fc8d6;
  background-color: '#343a40';
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}"
`;
